<resources>
    <string name="app_name">DiplomaIT</string>
    <string name="eadls">DiplomaIT</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm user</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="welcome">WELCOME</string>
    <string name="php">PHP</string>
</resources>
